[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.79"
axum = { version = "0.7.4", features = ["http2"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.30"
itertools = "0.12.0"
lazy_static = "1.4.0"
prometheus-client = "0.22.2"
prost = "0.12.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.198"
serde_json = "1.0.116"
subsquid-messages = { git = "ssh://git@github.com/subsquid/subsquid-network.git", version = "1.0.0-rc1" }
subsquid-network-transport = { git = "ssh://git@github.com/subsquid/subsquid-network.git", version = "1.0.0-rc1", features = ["observer", "metrics"] }
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-util = "0.7.10"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
