[package]
name = "observer"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.79"
axum = { version = "0.7.4", features = ["http2"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11"
futures = "0.3.30"
itertools = "0.12.0"
lazy_static = "1.4.0"
libp2p = { version = "0.55", features = ["dns", "tokio", "identify", "kad", "ping", "quic", "metrics"] }
libp2p-swarm-derive = { version = "0.35" }
prometheus-client = "0.22.2"
prost = "0.12.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-util = "0.7.10"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "fa19681", features = ["bitstring"] }
sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "fa19681" }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "fa19681", features = [] }
log = "0.4.21"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6" }